--- a/0_11_完整的训练流程.ipynb
+++ b/0_11_完整的训练流程.ipynb
@@ -1,25 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "from torch import nn\n",
-    "from torch import optim\n",
-    "from torch.nn import Linear,Conv2d,MaxPool2d,Flatten,ReLU\n",
-    "import torch.functional as F\n",
-    "import torchvision\n",
-    "\n",
-    "from torchvision import datasets\n",
-    "from torch.utils.data import DataLoader\n"
+    "# 3. CPU训练时间"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -27,64 +17,267 @@
      "output_type": "stream",
      "text": [
       "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n"
+      "Files already downloaded and verified\n",
+      "训练数据集的长度：50000\n",
+      "测试数据集的长度：10000\n",
+      "-----第 1 轮训练开始-----\n",
+      "59.79554271697998\n",
+      "训练次数：100，Loss：2.2845799922943115\n"
      ]
     }
    ],
    "source": [
-    "# 数据准备\n",
-    "trans = torchvision.transforms.ToTensor\n",
-    "train_data = datasets.CIFAR10(\"./dataset/\", True, transform=trans,download=True)\n",
-    "test_data = datasets.CIFAR10(\"./dataset/\", False, transform=trans,download=True)\n",
+    "import torchvision\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "import time\n",
     "\n",
-    "train_loader = DataLoader(train_data, 64, True, drop_last=False)\n",
-    "test_loader = DataLoader(test_data, 64, True, drop_last=False)"
+    "# from model import * 相当于把 model中的所有内容写到这里，这里直接把 model 写在这里\n",
+    "class Tudui(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Tudui, self).__init__()        \n",
+    "        self.model1 = nn.Sequential(\n",
+    "            nn.Conv2d(3,32,5,1,2),  # 输入通道3，输出通道32，卷积核尺寸5×5，步长1，填充2    \n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.Conv2d(32,32,5,1,2),\n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.Conv2d(32,64,5,1,2),\n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.Flatten(),  # 展平后变成 64*4*4 了\n",
+    "            nn.Linear(64*4*4,64),\n",
+    "            nn.Linear(64,10)\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.model1(x)\n",
+    "        return x\n",
+    "\n",
+    "# 准备数据集\n",
+    "train_data = torchvision.datasets.CIFAR10(\"./dataset\",train=True,transform=torchvision.transforms.ToTensor(),download=True)       \n",
+    "test_data = torchvision.datasets.CIFAR10(\"./dataset\",train=False,transform=torchvision.transforms.ToTensor(),download=True)       \n",
+    "\n",
+    "# length 长度\n",
+    "train_data_size = len(train_data)\n",
+    "test_data_size = len(test_data)\n",
+    "# 如果train_data_size=10，则打印：训练数据集的长度为：10\n",
+    "print(\"训练数据集的长度：{}\".format(train_data_size))\n",
+    "print(\"测试数据集的长度：{}\".format(test_data_size))\n",
+    "\n",
+    "# 利用 Dataloader 来加载数据集\n",
+    "train_dataloader = DataLoader(train_data, batch_size=64)        \n",
+    "test_dataloader = DataLoader(test_data, batch_size=64)\n",
+    "\n",
+    "# 创建网络模型\n",
+    "tudui = Tudui() \n",
+    "\n",
+    "# 损失函数\n",
+    "loss_fn = nn.CrossEntropyLoss() # 交叉熵，fn 是 fuction 的缩写\n",
+    "\n",
+    "# 优化器\n",
+    "learning = 0.01  # 1e-2 就是 0.01 的意思\n",
+    "optimizer = torch.optim.SGD(tudui.parameters(),learning)   # 随机梯度下降优化器  \n",
+    "\n",
+    "# 设置网络的一些参数\n",
+    "# 记录训练的次数\n",
+    "total_train_step = 0\n",
+    "# 记录测试的次数\n",
+    "total_test_step = 0\n",
+    "\n",
+    "# 训练的轮次\n",
+    "epoch = 10\n",
+    "\n",
+    "# 添加 tensorboard\n",
+    "writer = SummaryWriter(\"logs\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for i in range(epoch):\n",
+    "    print(\"-----第 {} 轮训练开始-----\".format(i+1))\n",
+    "    \n",
+    "    # 训练步骤开始\n",
+    "    tudui.train() # 当网络中有dropout层、batchnorm层时，这些层能起作用\n",
+    "    for data in train_dataloader:\n",
+    "        imgs, targets = data\n",
+    "        outputs = tudui(imgs)\n",
+    "        loss = loss_fn(outputs, targets) # 计算实际输出与目标输出的差距\n",
+    "        \n",
+    "        # 优化器对模型调优\n",
+    "        optimizer.zero_grad()  # 梯度清零\n",
+    "        loss.backward() # 反向传播，计算损失函数的梯度\n",
+    "        optimizer.step()   # 根据梯度，对网络的参数进行调优\n",
+    "        \n",
+    "        total_train_step = total_train_step + 1\n",
+    "        if total_train_step % 100 == 0:\n",
+    "            end_time = time.time()\n",
+    "            print(end_time - start_time) # 运行训练一百次后的时间间隔\n",
+    "            print(\"训练次数：{}，Loss：{}\".format(total_train_step,loss.item()))  # 方式二：获得loss值\n",
+    "            writer.add_scalar(\"train_loss\",loss.item(),total_train_step)\n",
+    "    \n",
+    "    # 测试步骤开始（每一轮训练后都查看在测试数据集上的loss情况）\n",
+    "    tudui.eval()  # 当网络中有dropout层、batchnorm层时，这些层不能起作用\n",
+    "    total_test_loss = 0\n",
+    "    total_accuracy = 0\n",
+    "    with torch.no_grad():  # 没有梯度了\n",
+    "        for data in test_dataloader: # 测试数据集提取数据\n",
+    "            imgs, targets = data \n",
+    "            outputs = tudui(imgs)\n",
+    "            loss = loss_fn(outputs, targets) # 仅data数据在网络模型上的损失\n",
+    "            total_test_loss = total_test_loss + loss.item() # 所有loss\n",
+    "            accuracy = (outputs.argmax(1) == targets).sum()\n",
+    "            total_accuracy = total_accuracy + accuracy\n",
+    "            \n",
+    "    print(\"整体测试集上的Loss：{}\".format(total_test_loss))\n",
+    "    print(\"整体测试集上的正确率：{}\".format(total_accuracy/test_data_size))\n",
+    "    writer.add_scalar(\"test_loss\",total_test_loss,total_test_step)\n",
+    "    writer.add_scalar(\"test_accuracy\",total_accuracy/test_data_size,total_test_step)  \n",
+    "    total_test_step = total_test_step + 1\n",
+    "    \n",
+    "    torch.save(tudui, \"./model/tudui_{}.pth\".format(i)) # 保存每一轮训练后的结果\n",
+    "    #torch.save(tudui.state_dict(),\"tudui_{}.path\".format(i)) # 保存方式二         \n",
+    "    print(\"模型已保存\")\n",
+    "    \n",
+    "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gpu训练时间"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([64, 10])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 模型\n",
-    "class Module(nn.Module):\n",
+    "import torchvision\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "import time\n",
+    "\n",
+    "# 定义训练的设备\n",
+    "#device = torch.device(\"cpu\")\n",
+    "#device = torch.device(\"cuda\")   # 使用 GPU 方式一 \n",
+    "#device = torch.device(\"cuda:0\") # 使用 GPU 方式二\n",
+    "device = torch.device(\"dml\")\n",
+    "\n",
+    "# from model import * 相当于把 model中的所有内容写到这里，这里直接把 model 写在这里\n",
+    "class Tudui(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.model = nn.Sequential(\n",
-    "            nn.Conv2d(3, 32, kernel_size=5, stride=1, padding=2, padding_mode=\"zeros\"),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, ceil_mode=True),\n",
-    "            nn.Conv2d(32, 32, kernel_size=5, stride=1, padding=2, padding_mode=\"zeros\"),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, ceil_mode=True),\n",
-    "            nn.Conv2d(32, 64, kernel_size=5, stride=1, padding=2, padding_mode=\"zeros\"),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, ceil_mode=True),\n",
-    "            \n",
-    "            nn.Flatten(), # 64*4*4\n",
+    "        super(Tudui, self).__init__()        \n",
+    "        self.model1 = nn.Sequential(\n",
+    "            nn.Conv2d(3,32,5,1,2),  # 输入通道3，输出通道32，卷积核尺寸5×5，步长1，填充2    \n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.Conv2d(32,32,5,1,2),\n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.Conv2d(32,64,5,1,2),\n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.Flatten(),  # 展平后变成 64*4*4 了\n",
     "            nn.Linear(64*4*4,64),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(64,10),\n",
+    "            nn.Linear(64,10)\n",
     "        )\n",
-    "    def forward(self,x):\n",
-    "        return self.model(x)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.model1(x)\n",
+    "        return x\n",
+    "\n",
+    "# 准备数据集\n",
+    "train_data = torchvision.datasets.CIFAR10(\"./dataset\",train=True,transform=torchvision.transforms.ToTensor(),download=True)       \n",
+    "test_data = torchvision.datasets.CIFAR10(\"./dataset\",train=False,transform=torchvision.transforms.ToTensor(),download=True)       \n",
+    "\n",
+    "# length 长度\n",
+    "train_data_size = len(train_data)\n",
+    "test_data_size = len(test_data)\n",
+    "# 如果train_data_size=10，则打印：训练数据集的长度为：10\n",
+    "print(\"训练数据集的长度：{}\".format(train_data_size))\n",
+    "print(\"测试数据集的长度：{}\".format(test_data_size))\n",
+    "\n",
+    "# 利用 Dataloader 来加载数据集\n",
+    "train_dataloader = DataLoader(train_data, batch_size=64)        \n",
+    "test_dataloader = DataLoader(test_data, batch_size=64)\n",
+    "\n",
+    "# 创建网络模型\n",
+    "tudui = Tudui() \n",
+    "tudui = tudui.to(device) # 也可以不赋值，直接 tudui.to(device) \n",
+    "\n",
+    "\n",
+    "# 损失函数\n",
+    "loss_fn = nn.CrossEntropyLoss() # 交叉熵，fn 是 fuction 的缩写\n",
+    "loss_fn = loss_fn.to(device) # 也可以不赋值，直接loss_fn.to(device)\n",
+    "\n",
+    "# 优化器\n",
+    "learning = 0.01  # 1e-2 就是 0.01 的意思\n",
+    "optimizer = torch.optim.SGD(tudui.parameters(),learning)   # 随机梯度下降优化器  \n",
+    "\n",
+    "# 设置网络的一些参数\n",
+    "# 记录训练的次数\n",
+    "total_train_step = 0\n",
+    "# 记录测试的次数\n",
+    "total_test_step = 0\n",
+    "\n",
+    "# 训练的轮次\n",
+    "epoch = 10\n",
+    "\n",
+    "# 添加 tensorboard\n",
+    "writer = SummaryWriter(\"logs\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for i in range(epoch):\n",
+    "    print(\"-----第 {} 轮训练开始-----\".format(i+1))\n",
     "    \n",
-    "module =Module()\n",
-    "test_data = torch.ones((64,3,32,32)) # 输入的shape\n",
-    "out = module(test_data)\n",
-    "out.size() # 输出的shape - 64*10"
+    "    # 训练步骤开始\n",
+    "    tudui.train() # 当网络中有dropout层、batchnorm层时，这些层能起作用\n",
+    "    for data in train_dataloader:\n",
+    "        total_train_step = total_train_step + 1\n",
+    "\n",
+    "        imgs, targets = data            \n",
+    "        imgs = imgs.to(device) # 也可以不赋值，直接 imgs.to(device)\n",
+    "        targets = targets.to(device) # 也可以不赋值，直接 targets.to(device)\n",
+    "        outputs = tudui(imgs)\n",
+    "        loss = loss_fn(outputs, targets) # 计算实际输出与目标输出的差距\n",
+    "        \n",
+    "        # 优化器对模型调优\n",
+    "        optimizer.zero_grad()  # 梯度清零\n",
+    "        loss.backward() # 反向传播，计算损失函数的梯度\n",
+    "        optimizer.step()   # 根据梯度，对网络的参数进行调优\n",
+    "\n",
+    "        if total_train_step % 100 == 0:\n",
+    "            end_time = time.time()\n",
+    "            print(\"time:\", end_time - start_time) # 运行训练一百次后的时间间隔\n",
+    "            print(\"训练次数：{}，Loss：{}\".format(total_train_step,loss.item()))  # 方式二：获得loss值\n",
+    "            writer.add_scalar(\"train_loss\",loss.item(),total_train_step)\n",
+    "    \n",
+    "    # 测试步骤开始（每一轮训练后都查看在测试数据集上的loss情况）\n",
+    "    tudui.eval()  # 当网络中有dropout层、batchnorm层时，这些层不能起作用\n",
+    "    total_test_loss = 0\n",
+    "    total_accuracy = 0\n",
+    "    with torch.no_grad():  # 没有梯度了\n",
+    "        for data in test_dataloader: # 测试数据集提取数据\n",
+    "            imgs, targets = data # 数据放到cuda上\n",
+    "            imgs = imgs.to(device) # 也可以不赋值，直接 imgs.to(device)\n",
+    "            targets = targets.to(device) # 也可以不赋值，直接 targets.to(device)\n",
+    "            outputs = tudui(imgs)\n",
+    "            loss = loss_fn(outputs, targets) # 仅data数据在网络模型上的损失\n",
+    "            total_test_loss = total_test_loss + loss.item() # 所有loss\n",
+    "            accuracy = (outputs.argmax(1) == targets).sum()\n",
+    "            total_accuracy = total_accuracy + accuracy\n",
+    "            \n",
+    "    print(\"整体测试集上的Loss：{}\".format(total_test_loss))\n",
+    "    print(\"整体测试集上的正确率：{}\".format(total_accuracy/test_data_size))\n",
+    "    writer.add_scalar(\"test_loss\",total_test_loss,total_test_step)\n",
+    "    writer.add_scalar(\"test_accuracy\",total_accuracy/test_data_size,total_test_step)  \n",
+    "    total_test_step = total_test_step + 1\n",
+    "    \n",
+    "    torch.save(tudui, \"./model/tudui_{}.pth\".format(i)) # 保存每一轮训练后的结果\n",
+    "    #torch.save(tudui.state_dict(),\"tudui_{}.path\".format(i)) # 保存方式二         \n",
+    "    print(\"模型已保存\")\n",
+    "    \n",
+    "writer.close()"
    ]
   }
  ],
