--- a/5_实例_卷积综合.ipynb
+++ b/5_实例_卷积综合.ipynb
@@ -224,6 +224,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 展示数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def im_convert(tensor_img):\n",
+    "    img = tensor_img.clone().detach().numpy() # clone()：拷贝为新的地址，但是梯度和原有的关联，detach()和clone()相反\n",
+    "    img = img.numpy().squeeze() # squeeze 将多余的维度去掉，比如(1,3,2,1) -> (3,2)\n",
+    "    img = img.transpose(1,2,0) # tensor格式的图片(3,h,w) -> (h,w,3)\n",
+    "    img = img * np.array((0.229, 0.224, 0.225)) + np.array((0.485, 0.456, 0.406)) # 将normalize的图片还原\n",
+    "    img = img.clip(0, 1)\n",
+    "    return img"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
