--- a/5_实例_卷积综合.ipynb
+++ b/5_实例_卷积综合.ipynb
@@ -285,18 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Linear(in_features=2048, out_features=102, bias=True)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "params_to_update: ['fc.weight', 'fc.bias']\n"
+     ]
     }
    ],
    "source": [
@@ -317,45 +314,37 @@
     "    if model_name == 'resnet':\n",
     "        model=models.resnet152(pretrained=use_pretrained)\n",
     "    \n",
-    "    # 改变模型fc\n",
+    "        # feature_extract\n",
+    "        setParamRequiresGrad(model, feature_extract)\n",
+    "\n",
+    "        # 改变模型fc\n",
     "        model.fc = nn.Linear(model.fc.in_features, n_classes)\n",
     "\n",
-    "    # feature_extract\n",
-    "    setParamRequiresGrad(model, feature_extract)\n",
-    "\n",
-    "    # input_size\n",
-    "    input_size = 224\n",
+    "        # input_size\n",
+    "        input_size = 224\n",
     "    return model, input_size\n",
-    "    \n",
     "\n",
-    "model,_ = initialize_model(model_name=\"resnet\", n_classes=len(classes), feature_extract=True, use_pretrained=True)\n",
-    "model.fc"
+    "# 模型\n",
+    "feature_extract = True\n",
+    "ispretrained = True\n",
+    "model,_ = initialize_model(model_name=\"resnet\", n_classes=len(classes), feature_extract=feature_extract, use_pretrained=ispretrained)\n",
+    "# model.fc\n",
+    "model_save_name = \"checkpoint.pth\" # 选取最好的训练结果保存\n",
+    "\n",
+    "# GPU\n",
+    "device = torch.device(\"dml\")\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# 更新权重的层\n",
+    "params_to_update = []\n",
+    "if feature_extract:\n",
+    "    for name,params in model.named_parameters():\n",
+    "        if params.requires_grad == True:\n",
+    "            params_to_update.append(name)\n",
+    "else:\n",
+    "    params_to_update = list(map(lambda x: x[0],list(model.named_parameters())))\n",
+    "print(\"params_to_update:\", params_to_update)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "102"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
