--- a/0_0_基础.ipynb
+++ b/0_0_基础.ipynb
@@ -31,117 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]]),\n",
-       " tensor([[0., 0., 0.],\n",
-       "         [0., 0., 0.],\n",
-       "         [0., 0., 0.]]),\n",
-       " array([[ 0.47476786,  0.48442688, -0.93860956],\n",
-       "        [-1.00973914,  1.2346054 ,  1.85082098],\n",
-       "        [-0.29988736, -0.61755076,  1.37035593]]),\n",
-       " tensor([[0.7041, 0.1913, 0.7053],\n",
-       "         [0.6719, 0.8334, 0.9139],\n",
-       "         [0.8065, 0.8379, 0.7031]]))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 创建空/0矩阵\n",
-    "np.empty((3,3)), torch.empty((3,3)), np.random.randn(3,3), torch.rand(3,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([2., 3.])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 直接创建矩阵\n",
-    "torch.tensor([2,3],dtype=torch.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[1, 1, 1],\n",
-       "         [1, 1, 1],\n",
-       "         [1, 1, 1]], dtype=torch.int8),\n",
-       " tensor([[-1.7126,  0.8128,  2.9499],\n",
-       "         [-0.0360, -0.7212,  1.2173],\n",
-       "         [-0.1886, -0.1427,  2.0060]]))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# ones_like, rand(n).like\n",
-    "x = torch.zeros((3,3))\n",
-    "torch.ones_like(x, dtype=torch.int8), torch.randn_like(x, dtype=torch.float32) # torch.dtype 查看类型"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Scalar 形式\n",
-    "0维数组"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scalar =  torch.tensor(42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 展示矩阵大小,改变维度"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([3, 3]), 3)"
+       "tensor([1, 2, 3])"
       ]
      },
      "execution_count": 6,
@@ -150,8 +46,8 @@
     }
    ],
    "source": [
-    "# 展示矩阵大小\n",
-    "x.size(),x.size()[0]  # np.shape"
+    "# 直接创建矩阵\n",
+    "torch.tensor([1,2,3])"
    ]
   },
   {
@@ -162,7 +58,21 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "(array([[0.50338063, 0.0886115 , 0.62625911],\n",
+       "        [2.6745378 , 1.49680326, 0.93692592],\n",
+       "        [0.28605136, 1.10348178, 2.60348913]]),\n",
+       " tensor([[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]]),\n",
+       " array([[ 1.30448465, -1.1991695 ,  0.83209718],\n",
+       "        [-0.40459409,  1.21164446, -0.45960217],\n",
+       "        [ 1.98995088, -0.54376153,  0.54379349]]),\n",
+       " tensor([[0.1092, 0.7794, 0.5445],\n",
+       "         [0.3198, 0.0667, 0.2301],\n",
+       "         [0.6377, 0.8272, 0.9112]]),\n",
+       " tensor([[0.9521, 0.2050, 0.9049],\n",
+       "         [0.6741, 0.1492, 0.7110],\n",
+       "         [0.6013, 0.7785, 0.1745]]))"
       ]
      },
      "execution_count": 7,
@@ -171,62 +81,21 @@
     }
    ],
    "source": [
-    "# 查看维度\n",
-    "x.dim()"
+    "# 创建空/0矩阵 - 和 numpy 类似\n",
+    "np.empty((3,3)), torch.empty((3,3)), np.random.randn(3,3), torch.rand(3,3), torch.rand((3,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# x.item() # ValueError: only one element tensors can be converted to Python scalars\n",
-    "scalar.item()  # int(scalar.numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 改变维度\n",
-    "x.view((1,9)) # view\n",
-    "x.reshape((3,3)) # view\n",
-    "\n",
-    "x.clone() # copy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 更改数据类型"
+    "# 直接创建常量tensor\n",
+    "shape = (2,3,)\n",
+    "rand_tensor = torch.rand(shape)\n",
+    "ones_tensor = torch.ones(shape)\n",
+    "zeros_tensor = torch.zeros(shape)"
    ]
   },
   {
@@ -237,9 +106,12 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0, 0, 0],\n",
-       "        [0, 1, 0],\n",
-       "        [2, 0, 0]], dtype=torch.int32)"
+       "(tensor([[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]], dtype=torch.int8),\n",
+       " tensor([[ 0.6613, -1.7398, -0.3245],\n",
+       "         [ 0.1812,  0.9102,  1.0807],\n",
+       "         [-0.7743,  0.1922,  0.0591]]))"
       ]
      },
      "execution_count": 12,
@@ -248,29 +120,400 @@
     }
    ],
    "source": [
-    "x.type(torch.int32)"
+    "# 从另外的tensor获得\n",
+    "x = torch.zeros((3,3))\n",
+    "torch.ones_like(x, dtype=torch.int8), torch.randn_like(x, dtype=torch.float32) # torch.dtype 查看类型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0, 0, 0],\n",
-       "        [0, 1, 0],\n",
-       "        [2, 0, 0]])"
+       "tensor([1, 2, 3], dtype=torch.int32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.long()"
+    "# 从numpy转换\n",
+    "arr = np.array([1,2,3])\n",
+    "arr_torch = torch.from_numpy(arr)\n",
+    "arr_torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# torch类型转换为numpy类型\n",
+    "arr_torch.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tensor的属性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.int64, device(type='cpu'), torch.Size([3, 3]), 2)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_torch = torch.full((3,3),3)\n",
+    "# 类型\n",
+    "tensor_type = arr_torch.dtype\n",
+    "# 设备\n",
+    "tensor_device = arr_torch.device\n",
+    "# shape\n",
+    "tensor_shape = arr_torch.shape # arr_torch.size()\n",
+    "# 查看维度\n",
+    "tensor_dim = arr_torch.dim()\n",
+    "tensor_type, tensor_device, tensor_shape, tensor_dim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scalar 形式\n",
+    "0维数组"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(42), 42)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 取出0维度数组的数字\n",
+    "scalar =  torch.tensor(42)\n",
+    "scalar, scalar.item() # 注意：高维数组没有item()属性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数组操作"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 索引和切片"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First row:  tensor([1., 1., 1., 1.])\n",
+      "First column:  tensor([1., 1., 1., 1.])\n",
+      "Last column: tensor([1., 1., 1., 1.])\n",
+      "tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor = torch.ones(4, 4)\n",
+    "print('First row: ',tensor[0])\n",
+    "print('First column: ', tensor[:, 0])\n",
+    "print('Last column:', tensor[...,-1])\n",
+    "tensor[:,1] = 0\n",
+    "print(tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 连接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 1.],\n",
+       "         [1., 1.]]),\n",
+       " tensor([[1., 1.],\n",
+       "         [1., 1.],\n",
+       "         [1., 1.],\n",
+       "         [1., 1.]]),\n",
+       " tensor([[[1., 1.],\n",
+       "          [1., 1.]],\n",
+       " \n",
+       "         [[1., 1.],\n",
+       "          [1., 1.]]]),\n",
+       " tensor([[1., 1., 1., 1.],\n",
+       "         [1., 1., 1., 1.]]),\n",
+       " tensor([[[1., 1.],\n",
+       "          [1., 1.]],\n",
+       " \n",
+       "         [[1., 1.],\n",
+       "          [1., 1.]]]))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# torch.cat, torch.stack\n",
+    "tensor = torch.ones(2, 2)\n",
+    "tensor_cat_0 = torch.cat((tensor,tensor), dim=0)\n",
+    "tensor_stack_0 = torch.stack((tensor,tensor), dim=0)\n",
+    "\n",
+    "tensor_cat_1 = torch.cat((tensor,tensor), dim=1)\n",
+    "tensor_stack_1 = torch.stack((tensor,tensor), dim=1)\n",
+    "\n",
+    "tensor, tensor_cat_0, tensor_stack_0, tensor_cat_1, tensor_stack_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 改变形状"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 2],\n",
+       "        [3, 4, 5],\n",
+       "        [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 改变维度\n",
+    "tensor = torch.arange(9)\n",
+    "tensor.view((1,9)) # view\n",
+    "tensor.reshape((3,3)) # view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0],\n",
+      "        [1],\n",
+      "        [2],\n",
+      "        [3],\n",
+      "        [4],\n",
+      "        [5],\n",
+      "        [6],\n",
+      "        [7],\n",
+      "        [8]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 增加维度\n",
+    "print(tensor[:,None])\n",
+    "# 转换为1维度数组\n",
+    "tensor.flatten()\n",
+    "tensor.ravel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 更改数据类型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor = tensor.type(torch.int32) # 拷贝\n",
+    "tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor = tensor.long()  # 拷贝\n",
+    "tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数学运算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[2., 2.],\n",
+       "         [2., 2.]]),\n",
+       " tensor([[2., 2.],\n",
+       "         [2., 2.]]),\n",
+       " tensor([[2., 2.],\n",
+       "         [2., 2.]]))"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 矩阵乘法\n",
+    "# tensor = torch.arange(4).reshape((2,2))\n",
+    "tensor = torch.ones(2,2)\n",
+    "y1 = tensor @ tensor\n",
+    "y2 = tensor.matmul(tensor)\n",
+    "y3 = torch.rand_like(tensor)\n",
+    "torch.matmul(tensor, tensor, out=y3)\n",
+    "y1, y2, y2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 1.],\n",
+       "         [1., 1.]]),\n",
+       " tensor([[1., 1.],\n",
+       "         [1., 1.]]))"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 对应数字相乘\n",
+    "tensor = torch.ones(2,2)\n",
+    "y1 = tensor.mul(tensor)\n",
+    "y2 = torch.rand_like(y1)\n",
+    "torch.mul(tensor, tensor, out=y2)\n",
+    "y1, y2"
    ]
   },
   {
@@ -282,51 +525,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-0.88871485, -0.6527283 ,  0.03630412],\n",
-       "       [-0.6330581 ,  1.9641341 , -0.4026074 ],\n",
-       "       [ 2.4929228 , -0.1117723 ,  0.05388178]], dtype=float32)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([1., 1., 1., 1., 1.])\n",
+      "n: [1. 1. 1. 1. 1.]\n"
+     ]
     }
    ],
    "source": [
-    "# torch to numpy\n",
-    "x = torch.randn(3,3)\n",
-    "y = x.numpy()\n",
-    "y"
+    "# tensor -> numpy\n",
+    "t = torch.ones(5)\n",
+    "n = t.numpy() # 返回的是t的view()\n",
+    "\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[-0.8887, -0.6527,  0.0363],\n",
-       "        [-0.6331,  1.9641, -0.4026],\n",
-       "        [ 2.4929, -0.1118,  0.0539]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([2., 2., 2., 2., 2.])\n",
+      "n: [2. 2. 2. 2. 2.]\n"
+     ]
     }
    ],
    "source": [
-    "# numpy to torch\n",
-    "x = torch.from_numpy(y)\n",
-    "x"
+    "# tensor 和 numpy 相互影响\n",
+    "t.add_(1) # add_后面的横杠代表原位相加\n",
+    "\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n",
+      "n: [2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy to tensor\n",
+    "n = np.ones(5)\n",
+    "t = torch.from_numpy(n)\n",
+    "np.add(n,1,out=n)\n",
+    "\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
    ]
   }
  ],
