--- a/1_自动求导机制.ipynb
+++ b/1_自动求导机制.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "         [2., 2., 2.]], requires_grad=True))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,21 +57,21 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 运算\n",
-    "t = a + b\n",
+    "t = a + b # a或者其中一个requires_grad = True, 经过a和b运算的新变量也是requires_grad = True\n",
     "y = t.sum()\n",
     "t.requires_grad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gchen\\AppData\\Local\\Temp\\ipykernel_12856\\1000682177.py:2: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the gradient for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations.\n",
-      "  a.grad, b.grad, t.grad\n"
+      "C:\\Users\\gchen\\AppData\\Local\\Temp\\ipykernel_19268\\3731220033.py:2: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the gradient for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations.\n",
+      "  a.grad, b.grad, t.grad # 只有叶子节点有grad\n"
      ]
     },
     {
@@ -104,14 +104,14 @@
        " None)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 获得梯度值\n",
-    "a.grad, b.grad, t.grad"
+    "a.grad, b.grad, t.grad # 只有叶子节点有grad"
    ]
   },
   {
@@ -185,6 +185,236 @@
     "print(a.is_leaf, b.is_leaf, w.is_leaf, y.is_leaf, t.is_leaf)  # 判断是否为叶子节点\n",
     "a.grad, b.grad, w.grad, y.grad, t.grad"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 梯度的累加"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n",
+      "tensor([[2., 2.],\n",
+      "        [2., 2.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.full((2,2),1,dtype=torch.float32,requires_grad =True)\n",
+    "b = torch.full((2,2),2,dtype=torch.float32,requires_grad =True)\n",
+    "\n",
+    "# 初始梯度为None\n",
+    "print(a.grad)\n",
+    "\n",
+    "# 第一次累加的梯度\n",
+    "c = a + b\n",
+    "# c.backward() # grad can be implicitly created only for scalar outputs\n",
+    "t = c.sum()\n",
+    "t.backward()\n",
+    "print(a.grad)\n",
+    "# with torch.no_grad():\n",
+    "\n",
+    "# 第二次梯度\n",
+    "c = a + b\n",
+    "t = c.sum()\n",
+    "t.backward()\n",
+    "print(a.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### X.grad=None 手动把梯度归零"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.full((2,2),1,dtype=torch.float32,requires_grad =True)\n",
+    "b = torch.full((2,2),2,dtype=torch.float32,requires_grad =True)\n",
+    "\n",
+    "# 初始梯度为None\n",
+    "print(a.grad)\n",
+    "\n",
+    "# 第一次累加的梯度\n",
+    "c = a + b\n",
+    "# c.backward() # grad can be implicitly created only for scalar outputs\n",
+    "t = c.sum()\n",
+    "t.backward()\n",
+    "print(a.grad)\n",
+    "# with torch.no_grad():\n",
+    "\n",
+    "a.grad=None  # 手动清除梯度\n",
+    "# 第二次梯度\n",
+    "c = a + b\n",
+    "t = c.sum()\n",
+    "t.backward()\n",
+    "print(a.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### with torch.no_grad()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.full((2,2),1,dtype=torch.float32,requires_grad =True)\n",
+    "b = torch.full((2,2),2,dtype=torch.float32,requires_grad =True)\n",
+    "\n",
+    "# 初始梯度为None\n",
+    "print(a.grad)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    c = a + b\n",
+    "    t = c.sum()\n",
+    "# t.backward() # RuntimeError: element 0 of tensors does not require grad and does not have a grad_fn\n",
+    "c1 = a + b\n",
+    "t1 = c1.sum()\n",
+    "t1.backward()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 梯度的打开与关闭是针对运算过程而言"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.full((2,2),1,dtype=torch.float32,requires_grad =True)\n",
+    "b = torch.full((2,2),2,dtype=torch.float32,requires_grad =True)\n",
+    "\n",
+    "# 初始梯度为None\n",
+    "print(a.grad)\n",
+    "\n",
+    "c = a + b\n",
+    "t = c.sum()\n",
+    "with torch.no_grad():\n",
+    "    t.backward() # RuntimeError: element 0 of tensors does not require grad and does not have a grad_fn\n",
+    "print(a.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 在特定情况下打开梯度\n",
+    "torch.set_grad_enabled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n",
+      "tensor([[2., 2.],\n",
+      "        [2., 2.]])\n",
+      "tensor([[2., 2.],\n",
+      "        [2., 2.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.full((2,2),1,dtype=torch.float32,requires_grad =True)\n",
+    "b = torch.full((2,2),2,dtype=torch.float32,requires_grad =True)\n",
+    "\n",
+    "# 初始梯度为None\n",
+    "print(a.grad)\n",
+    "\n",
+    "# 第一次累加的梯度\n",
+    "c = a + b\n",
+    "t = c.sum()\n",
+    "t.backward()\n",
+    "print(a.grad)\n",
+    "# with torch.no_grad():\n",
+    "\n",
+    "# 打开梯度\n",
+    "with torch.set_grad_enabled(True):\n",
+    "    c = a + b\n",
+    "    t = c.sum()\n",
+    "    t.backward()\n",
+    "    print(a.grad)\n",
+    "\n",
+    "# 关闭梯度\n",
+    "with torch.set_grad_enabled(False):\n",
+    "    c = a + b\n",
+    "    t = c.sum()\n",
+    "# t.backward() # RuntimeError: element 0 of tensors does not require grad and does not have a grad_fn\n",
+    "print(a.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
